--- a/TeacherFox/app/src/main/res/layout/questoes.xml
+++ b/TeacherFox/app/src/main/res/layout/questoes.xml
@@ -51,6 +51,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+
                 android:background="@drawable/botaomdbg"
                 android:layout_marginBottom="3dp"
                 android:onClick="resposta"
@@ -60,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:text="A) Resposta"
                     android:alpha="0.8"
+android:paddingBottom="5dp"
                     android:textSize="17sp"
                     android:textStyle="bold"
                     android:textColor="@color/abc_primary_text_disable_only_material_light"
@@ -75,7 +77,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
@@ -97,7 +99,7 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
@@ -120,7 +122,7 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
@@ -142,7 +144,7 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
