Upload de etapa inicial

--- a/TeacherFox/app/src/main/res/values/colors.xml
+++ b/TeacherFox/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF5722</color>
     <color name="colorAccentDark">#E64A19</color>
     <color name="colorBackground">#BBDEFB</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
