--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/butbg"
-    tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
+    android:background="@drawable/butbg">
+    <!--tools:context="com.teacherfox.legendary.teacherfox.MainActivity"-->
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +46,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
-        android:src="@drawable/skin0"
+        android:src="@drawable/foxx"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
