--- a/TeacherFox/app/src/main/res/layout/perfil.xml
+++ b/TeacherFox/app/src/main/res/layout/perfil.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/butbg"
-    tools:context="com.teacherfox.legendary.teacherfox.Results">
+    android:background="@drawable/butbg">
+    <!--tools:context="com.teacherfox.legendary.teacherfox.Results"-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,10 +23,11 @@
     <RelativeLayout
         android:layout_width="250dp"
         android:layout_height="300dp"
-        android:id="@+id/foxfull"
-        android:background="@drawable/skin0full"
+
+        android:background="@drawable/rapo"
         android:layout_above="@+id/txRes"
         android:layout_centerHorizontal="true">
+        <!--android:background="@drawable/skin0full"-->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
