--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/butbg">
-    <!--tools:context="com.teacherfox.legendary.teacherfox.MainActivity"-->
+    android:background="@drawable/butbg"
+    tools:context="com.legendary.teacherfox.MainActivity"
+    >
+
 
     <RelativeLayout
         android:layout_width="match_parent"
