--- a/TeacherFox/app/src/main/res/layout/perfil.xml
+++ b/TeacherFox/app/src/main/res/layout/perfil.xml
@@ -79,15 +79,16 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Moedas"
-        android:id="@+id/textView5"
         android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignRight="@+id/ptxe"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_alignRight="@+id/foxfull"
-        android:layout_alignEnd="@+id/foxfull" />
+        android:layout_marginRight="-92dp"
+
+        android:text="Moedas"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:layout_width="wrap_content"
