--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -67,10 +67,10 @@
                 android:visibility="invisible" />
 
             <RelativeLayout
-                android:layout_width="90dp"
+                android:layout_width="95dp"
                 android:layout_height="100dp"
                 android:id="@+id/Avatar"
-                android:background="@drawable/rapo"
+                android:background="@drawable/skin0"
 
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
