--- a/TeacherFox/app/src/main/res/layout/resultscreen.xml
+++ b/TeacherFox/app/src/main/res/layout/resultscreen.xml
@@ -1,90 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/butbg">
+    android:background="@drawable/butbg"
+    android:orientation="vertical">
     <!--tools:context="com.legendary.teacherfox.Results"-->
 
     <TextView
+        android:id="@+id/txRes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Resultado"
-        android:id="@+id/txRes"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-
-        android:textSize="40sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10pt"
+        android:text="Resultado"
+
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/gotMoney"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="+00$"
-        android:id="@+id/gotMoney"
         android:layout_alignTop="@+id/gotExp"
+        android:layout_toEndOf="@+id/relativeLayout3"
         android:layout_toRightOf="@+id/relativeLayout3"
-        android:layout_toEndOf="@+id/relativeLayout3" />
+        android:text="+00$"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <RelativeLayout
-        android:layout_width="250dp"
-        android:layout_height="300dp"
         android:id="@+id/foxfull"
-        android:background="@drawable/rapo"
+        android:layout_width="322dp"
+        android:layout_height="397dp"
         android:layout_below="@+id/txRes"
-        android:layout_centerHorizontal="true">
+        android:layout_centerInParent="true"
+        android:layout_marginTop="69dp"
+        android:background="@drawable/rapo">
         <!--android:background="@drawable/skin0full"-->
         <ImageView
+            android:id="@+id/hatavr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            android:id="@+id/hatavr" />
+            android:visibility="visible" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:background="@drawable/botaoorgmd"
+        android:id="@+id/relativeLayout3"
         android:layout_width="200dp"
         android:layout_height="75dp"
-        android:onClick="returnToMenu"
-        android:id="@+id/relativeLayout3"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10pt"
+        android:background="@drawable/botaoorgmd"
+        android:onClick="returnToMenu">
         fm
+
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Menu"
-            android:textStyle="bold"
-
-            android:id="@+id/textView4"
-            android:textSize="35sp"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+
+            android:text="Menu"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="35sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/gotExp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="+00$"
-        android:id="@+id/gotExp"
         android:layout_above="@+id/relativeLayout3"
+        android:layout_toStartOf="@+id/txRes"
         android:layout_toLeftOf="@+id/txRes"
-        android:layout_toStartOf="@+id/txRes" />
+        android:text="+00$"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
+        android:id="@+id/txlvl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/txlvl"
-        android:textStyle="bold"
-        android:textSize="30sp"
         android:layout_alignBaseline="@+id/gotMoney"
         android:layout_alignBottom="@+id/gotMoney"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
