--- a/TeacherFox/app/src/main/res/values/themes.xml
+++ b/TeacherFox/app/src/main/res/values/themes.xml
@@ -9,8 +9,10 @@
         <item name="colorSecondary">@color/colorAccent</item>
         <item name="colorSecondaryVariant">@color/colorAccentDark</item>
         <item name="colorOnSecondary">@color/white</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowBackground">@drawable/splash_fox</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
