--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -23,6 +23,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
         <TextView
+            android:id="@+id/jogoraptxt"
             android:layout_width="wrap_content"
             android:text="@string/jogorapido"
             android:layout_height="wrap_content"
