--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -10,7 +10,7 @@
         android:layout_height="140dp"
         android:background="@drawable/botaomd"
         android:id="@+id/btn_jogorapido"
-        android:onClick="questao"
+        android:onClick="irQuestao"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
